# GeomInertiaEstimator

./: CMakeLists.txt  README.md  package.xml
config/: PlotJuggler_Layout.xml  quad_params.yaml
include/geom_inertia_estimator/: geom_inertia_estimator.h  v_tools.h
include/geom_inertia_estimator/calc_EKF_F_optimized/: buildInfo.mat  calc_EKF_F_optimized.cpp  calc_EKF_F_optimized.h  calc_EKF_F_optimized_rtw.mk  calc_EKF_F_optimized_terminate.cpp  calc_EKF_F_optimized_terminate.h  codedescriptor.dmr  gcGuiReport.mat  rtGetInf.h  rtGetNaN.cpp  rtGetNaN.h  rtw_proj.tmw  sign.cpp  sign.h  sqrt.h
include/geom_inertia_estimator/calc_EKF_F_optimized/examples/: main.cpp
include/geom_inertia_estimator/calc_EKF_F_optimized/html/: calc_EKF_F_optimized1_watch.html  calc_EKF_F_optimized_buildlog1.html  calc_EKF_F_optimized_h.html  calc_EKF_F_optimized_initialize_cpp.html  calc_EKF_F_optimized_initialize_h.html  calc_EKF_F_optimized_terminate_h.html  calc_EKF_F_optimized_types_h.html  report.mldatx  rtGetInf_cpp.html  rtGetNaN_h.html  rt_defines_h.html  rt_nonfinite_h.html  sqrt_cpp.html  sqrt_h.html
include/geom_inertia_estimator/calc_EKF_F_optimized/interface/: _coder_calc_EKF_F_optimized_info.c  _coder_calc_EKF_F_optimized_mex.h
include/geom_inertia_estimator/calc_EKF_H_imu_optimized_simple/: calc_EKF_H_imu_optimized_simple.cpp  calc_EKF_H_imu_optimized_simple.h  calc_EKF_H_imu_optimized_simple_rtw.mk  calc_EKF_H_imu_optimized_simple_terminate.cpp  rtGetInf.h  rtGetNaN.cpp  rtGetNaN.h
include/geom_inertia_estimator/calc_EKF_H_imu_optimized_simple/html/: calc_EKF_H_imu_optimized_simple1_mcode.html  calc_EKF_H_imu_optimized_simple_terminate_cpp.html  calc_EKF_H_imu_optimized_simple_terminate_h.html  exported_values.mat  main_h.html  metrics.html  report.mldatx  rtwtypes_h.html
include/geom_inertia_estimator/calc_EKF_H_imu_optimized_simple/interface/: _coder_calc_EKF_H_imu_optimized_simple_api.c  _coder_calc_EKF_H_imu_optimized_simple_api.h  _coder_calc_EKF_H_imu_optimized_simple_info.h
include/geom_inertia_estimator/calc_EKF_H_odom_optimized_simple/: calc_EKF_H_odom_optimized_simple.cpp  calc_EKF_H_odom_optimized_simple_initialize.h  calc_EKF_H_odom_optimized_simple_rtw.mk  calc_EKF_H_odom_optimized_simple_terminate.cpp  calc_EKF_H_odom_optimized_simple_types.h  codedescriptor.dmr  rtGetInf.cpp  rtGetNaN.h  rt_nonfinite.cpp
include/geom_inertia_estimator/calc_EKF_H_odom_optimized_simple/examples/: main.cpp
include/geom_inertia_estimator/calc_EKF_H_odom_optimized_simple/html/: calc_EKF_H_odom_optimized_simple1_watch.html  calc_EKF_H_odom_optimized_simple_buildlog1.html  calc_EKF_H_odom_optimized_simple_buildlog2.html  calc_EKF_H_odom_optimized_simple_cpp.html  calc_EKF_H_odom_optimized_simple_initialize_cpp.html  calc_EKF_H_odom_optimized_simple_terminate_cpp.html  calc_EKF_H_odom_optimized_simple_terminate_h.html  calc_EKF_H_odom_optimized_simple_types_h.html  index.html  main_h.html  report.mldatx  rtGetInf_cpp.html  rt_nonfinite_h.html
include/geom_inertia_estimator/calc_EKF_H_odom_optimized_simple/interface/: _coder_calc_EKF_H_odom_optimized_simple_api.c  _coder_calc_EKF_H_odom_optimized_simple_api.h  _coder_calc_EKF_H_odom_optimized_simple_info.c  _coder_calc_EKF_H_odom_optimized_simple_mex.cpp
include/inertia_estimator/: inertia_estimator.h
include/inertia_estimator/calc_EKF_F_optimized/: calc_EKF_F_optimized_initialize.cpp  calc_EKF_F_optimized_initialize.h  calc_EKF_F_optimized_types.h  codeInfo.mat  rtGetInf.cpp  rt_defines.h  rt_nonfinite.cpp  rt_nonfinite.h  rtwtypes.h  sqrt.cpp
include/inertia_estimator/calc_EKF_F_optimized/examples/: main.h
include/inertia_estimator/calc_EKF_F_optimized/html/: calc_EKF_F_optimized1_mcode.html  calc_EKF_F_optimized_buildlog3.html  calc_EKF_F_optimized_cpp.html  calc_EKF_F_optimized_terminate_cpp.html  exported_values.mat  index.html  main_h.html  metrics.html  rtGetInf_h.html  rtGetNaN_cpp.html  rt_nonfinite_cpp.html  rtwtypes_h.html  sign_cpp.html  sign_h.html
include/inertia_estimator/calc_EKF_F_optimized/interface/: _coder_calc_EKF_F_optimized_api.c  _coder_calc_EKF_F_optimized_api.h  _coder_calc_EKF_F_optimized_info.h  _coder_calc_EKF_F_optimized_mex.cpp
include/inertia_estimator/calc_EKF_H_imu_optimized_simple/: buildInfo.mat  calc_EKF_H_imu_optimized_simple_initialize.cpp  calc_EKF_H_imu_optimized_simple_initialize.h  calc_EKF_H_imu_optimized_simple_terminate.h  calc_EKF_H_imu_optimized_simple_types.h  codeInfo.mat  codedescriptor.dmr  gcGuiReport.mat  rtGetInf.cpp  rt_nonfinite.cpp  rt_nonfinite.h  rtw_proj.tmw  rtwtypes.h
include/inertia_estimator/calc_EKF_H_imu_optimized_simple/examples/: main.cpp  main.h
include/inertia_estimator/calc_EKF_H_imu_optimized_simple/html/: calc_EKF_H_imu_optimized_simple1_watch.html  calc_EKF_H_imu_optimized_simple_buildlog1.html  calc_EKF_H_imu_optimized_simple_buildlog4.html  calc_EKF_H_imu_optimized_simple_cpp.html  calc_EKF_H_imu_optimized_simple_h.html  calc_EKF_H_imu_optimized_simple_initialize_cpp.html  calc_EKF_H_imu_optimized_simple_initialize_h.html  calc_EKF_H_imu_optimized_simple_types_h.html  index.html  rtGetInf_cpp.html  rtGetInf_h.html  rtGetNaN_cpp.html  rtGetNaN_h.html  rt_nonfinite_cpp.html  rt_nonfinite_h.html
include/inertia_estimator/calc_EKF_H_imu_optimized_simple/interface/: _coder_calc_EKF_H_imu_optimized_simple_info.c  _coder_calc_EKF_H_imu_optimized_simple_mex.cpp  _coder_calc_EKF_H_imu_optimized_simple_mex.h
include/inertia_estimator/calc_EKF_H_odom_optimized_simple/: buildInfo.mat  calc_EKF_H_odom_optimized_simple.h  calc_EKF_H_odom_optimized_simple_initialize.cpp  calc_EKF_H_odom_optimized_simple_terminate.h  codeInfo.mat  gcGuiReport.mat  rtGetInf.h  rtGetNaN.cpp  rt_nonfinite.h  rtw_proj.tmw  rtwtypes.h
include/inertia_estimator/calc_EKF_H_odom_optimized_simple/examples/: main.h
launch/: estimator.launch
msg/: MotorRPM.msg  ParameterEstimates.msg
src/: geom_inertia_estimator.cpp  geom_inertia_estimator_node.cpp  inertia_estimator.cpp  inertia_estimator_node.cpp  v_tools.cpp
(+12 files in other folders)
